@@ -15,7 +15,8 @@ Version 6.4.19
     statt der eigenen AVL-Methoden verwendet. Dies fixt ein Problem
     bei der Sortierung, wenn identische Schlüssel mehrfach auftauchen
     (z.B. gleiche Timestamps oder Dateigrößen). Zusätzlich kann nun
-    auch nach ATime, CTime, MTime und Dateigröße sortiert werden. 
+    auch nach ATime, CTime, MTime und Dateigröße sortiert werden.
+  - CDirEntry: "Is..."-Funktionen sind nun als "const" deklariert
   
 Version 6.4.18 vom 04.02.2014	(SVN-Tag: REL_6_4_18)
   - CID3Tag: Neue Funktion zum Auslesen von PRIV-Frames (PrivateData)
